--- a/Project/gradle/libs.versions.toml
+++ b/Project/gradle/libs.versions.toml
@@ -23,6 +23,9 @@ lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-view
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 
+circleimageview = { group = "de.hdodenhof", name = "circleimageview", version = "3.1.0" }
+
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 
