--- a/Project_v2/gradle/libs.versions.toml
+++ b/Project_v2/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ material = "1.12.0"
 constraintlayout = "2.1.4"
 navigationFragment = "2.8.3"
 navigationUi = "2.8.3"
+googleGmsGoogleServices = "4.4.2"
+firebaseFirestore = "25.1.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -19,6 +21,10 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 
+circleimageview = { group = "de.hdodenhof", name = "circleimageview", version = "3.1.0" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 
