--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -12,16 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectV2"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.ProjectV2">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".View.NotificationActivity" />
+        <activity android:name=".View.ProfileActivity" />
+        <activity android:name=".View.FacilityListActivity" />
+        <activity android:name=".View.AdminProfileListActivity" />
+        <activity android:name=".View.AdminImageListActivity" />
+        <activity android:name=".View.AdminFacilityListActivity" />
+        
     </application>
 
 </manifest>
