- Connected nav bar to Home Screen - Connected all nav bar elements to their layouts - Connected floating action button to appropriate layout - Implemented pagination and included some dummy events in Home Screen - Implemented custom back button functionality - Implemented all custom pop-ups for profile and event creation screens

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".View.AdminProfileListActivity" />
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
-        
+        <activity android:name=".View.CreateEventActivity" />
+
     </application>
 
 </manifest>
