--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".View.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
         <activity android:name=".View.NotificationActivity" />
         <activity android:name=".View.ProfileActivity" />
         <activity android:name=".View.FacilityListActivity" />
@@ -47,7 +46,7 @@
         <activity android:name=".View.FacilityCreateEditActivity" />
         <activity android:name=".View.EventDetailsActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
-        <activity android:name=".View.SignUpActivity" />
+
 
 
     </application>
