Cleaned the project, removed redundant file RegisterFragment created by me in branch Basics, fixed error with create_event_options.xml

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".View.AdminProfileListActivity" />
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
+        <activity android:name=".View.SignUpActivity"
+            tools:ignore="Instantiatable" />
         <activity android:name=".View.CreateEventActivity"
             android:exported="true"
             tools:ignore="MissingClass" />
