--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".View.EventHomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,15 +31,11 @@
         <activity android:name=".View.AdminFacilityListActivity" />
         <activity android:name=".View.SignUpActivity"
             tools:ignore="Instantiatable" />
-        <activity android:name=".View.CreateEventActivity"
-            android:exported="true"
-            tools:ignore="MissingClass" />
         <activity android:name=".View.CreateEventOptionsActivity"
             android:exported="true"
             tools:ignore="WrongManifestParent" />
-        <activity android:name=".View.CreateEventOptionsActivity" />
-        <activity android:name=".View.EventCreatorActivity" />
-        <activity android:name=".View.EventLandingPageActivity" />
+
+
         <activity android:name=".View.EventOptionsActivity" />
         <activity android:name=".View.FacilityListActivity"
             tools:ignore="DuplicateActivity" />
