--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
         <activity android:name=".View.CreateEventActivity" />
+        <activity android:name=".View.CreateEventOptionsActivity" />
         <activity android:name=".View.EventCreatorActivity" />
         <activity android:name=".View.EventLandingPageActivity" />
         <activity android:name=".View.EventOptionsActivity" />
