Added facility list button on homescreen.xml and worked on FacilityListActivity and FacilityCreateEditActivity

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity android:name=".View.EventCreatorActivity" />
         <activity android:name=".View.EventLandingPageActivity" />
         <activity android:name=".View.EventOptionsActivity" />
+        <activity android:name=".View.FacilityListActivity"
+            tools:ignore="DuplicateActivity" />
+        <activity android:name=".View.FacilityCreateEditActivity" />
 
     </application>
 
