--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -37,6 +37,14 @@
         <activity android:name=".View.CreateEventOptionsActivity"
             android:exported="true"
             tools:ignore="WrongManifestParent" />
+        <activity android:name=".View.CreateEventOptionsActivity" />
+        <activity android:name=".View.EventCreatorActivity" />
+        <activity android:name=".View.EventLandingPageActivity" />
+        <activity android:name=".View.EventOptionsActivity" />
+        <activity android:name=".View.FacilityListActivity"
+            tools:ignore="DuplicateActivity" />
+        <activity android:name=".View.FacilityCreateEditActivity" />
+        <activity android:name=".View.EventDetailsActivity"/>
 
     </application>
 
