Using the function checkAndAddData under EventController.java class , it allows the user to join the event, pass the appropriate data from users field in the database to events field under entrantList field , and also checks if the number of entrants have not exceeded the limit

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".View.FacilityListActivity"
             tools:ignore="DuplicateActivity" />
         <activity android:name=".View.FacilityCreateEditActivity" />
+        <activity android:name=".View.EventDetailsActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
 
     </application>
