--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".View.FacilityCreateEditActivity" />
         <activity android:name=".View.EventDetailsActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
+        <activity android:name=".View.SignUpActivity" />
+
 
     </application>
 
