Added owner fields for facility and event to check if user checking an event is the organiser for the same event or not

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".View.AdminProfileListActivity" />
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
+        <activity android:name=".View.EventCreatorActivity" />
         <activity android:name=".View.SignUpActivity"
             tools:ignore="Instantiatable" />
         <activity android:name=".View.CreateEventOptionsActivity"
@@ -40,7 +41,8 @@
         <activity android:name=".View.FacilityListActivity"
             tools:ignore="DuplicateActivity" />
 
-        <activity android:name=".View.EventDetailsActivity"/>
+        <activity android:name=".View.EventLandingPageOrganizerActivity"/>
+        <activity android:name=".View.EventLandingPageUserActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
 
 
