removed redundant EventDisplayController.java and added more activities to androidmanifest

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".View.EventLandingPageOrganizerActivity"/>
         <activity android:name=".View.EventLandingPageUserActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
+        <activity android:name=".View.EventCreatorActivity" />
 
 
 
