--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".View.EventHomeActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,10 +30,8 @@
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
         <activity android:name=".View.CreateEventOptionsActivity" />
-        <activity android:name=".View.EventCreatorActivity" />
+        <activity android:name=".View.CreateEventActivity" />
         <activity android:name=".View.EventLandingPageOrganizerActivity" />
-        <activity android:name=".View.EventOptionsActivity" />
-        <activity android:name=".View.EventLandingPageActivity"/>
         <activity android:name=".View.FacilityListActivity"
             tools:ignore="DuplicateActivity" />
         <activity android:name=".View.FacilityCreateEditActivity" />
