--- a/Project_v2/gradle/libs.versions.toml
+++ b/Project_v2/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ navigationFragment = "2.8.3"
 navigationUi = "2.8.3"
 googleGmsGoogleServices = "4.4.2"
 firebaseFirestore = "25.1.1"
+engageCore = "1.5.5"
+recyclerview = "1.3.2"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -23,6 +25,8 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 
 circleimageview = { group = "de.hdodenhof", name = "circleimageview", version = "3.1.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+engage-core = { group = "com.google.android.engage", name = "engage-core", version.ref = "engageCore" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
