--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".View.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
-        <activity android:name=".View.SignUpActivity" />
         <activity android:name=".View.NotificationActivity" />
         <activity android:name=".View.ProfileActivity" />
         <activity android:name=".View.FacilityListActivity" />
@@ -32,16 +30,15 @@
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
         <activity android:name=".View.CreateEventOptionsActivity" />
-        <activity android:name=".View.EventCreatorActivity" />
+        <activity android:name=".View.CreateEventActivity" />
+        <activity android:name=".View.EventLandingPageUserActivity" />
         <activity android:name=".View.EventLandingPageOrganizerActivity" />
-<!--        <activity android:name=".View.EventOptionsActivity" />-->
+        <activity android:name=".View.EventOptionsActivity" />
         <activity android:name=".View.FacilityListActivity"
             tools:ignore="DuplicateActivity" />
         <activity android:name=".View.FacilityCreateEditActivity" />
-        <activity android:name=".View.EventLandingPageUserActivity"/>
+        <activity android:name=".View.EventDetailsActivity"/>
         <activity android:name=".View.FacilityLandingPageActivity" />
-        <activity android:name=".View.QrOrganiserActivity" />
-        <activity android:name=".View.EntrantListActivity"/>
 
     </application>
 
