--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".View.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".MainActivity" />
         <activity android:name=".View.NotificationActivity" />
         <activity android:name=".View.ProfileActivity" />
         <activity android:name=".View.FacilityListActivity" />
@@ -33,15 +33,11 @@
         <activity android:name=".View.CreateEventActivity" />
         <activity android:name=".View.EventLandingPageUserActivity" />
         <activity android:name=".View.EventLandingPageOrganizerActivity" />
-        <activity android:name=".View.FacilityListActivity"
-            tools:ignore="DuplicateActivity" />
         <activity android:name=".View.FacilityCreateEditActivity" />
-        <activity android:name=".View.EventLandingPageUserActivity"
-            tools:ignore="DuplicateActivity" />
         <activity android:name=".View.FacilityLandingPageActivity" />
         <activity android:name=".View.QrOrganiserActivity" />
         <activity android:name=".View.EntrantListActivity"/>
-        <activity android:name=".View.EventHomeActivity"/>
+        <activity android:name=".View.SignUpActivity"/>
 
 
     </application>
