Updated the code in EventLandingPageUserActivity.java  by adding a function called checkGeolocation to fulfill make the user aware about geolocation

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".View.QrOrganiserActivity" />
         <activity android:name=".View.EntrantListActivity"/>
         <activity android:name=".View.SignUpActivity"/>
+        <activity android:name=".View.ProfileOverlayActivity"/>
 
 
     </application>
