added qr scanning functionality, now users can scan the qr code and it takes them to the event

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -39,6 +43,10 @@
         <activity android:name=".View.QrOrganiserActivity" />
         <activity android:name=".View.EntrantListActivity"/>
         <activity android:name=".View.SignUpActivity"/>
+        <activity android:name=".View.QRUserActivity"
+            android:screenOrientation="portrait"/>
+
+
 
 
     </application>
