--- a/Project_v2/gradle/libs.versions.toml
+++ b/Project_v2/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.7.1"
+cardview = "1.0.0"
+core = "3.5.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -10,8 +12,12 @@ navigationFragment = "2.8.3"
 navigationUi = "2.8.3"
 googleGmsGoogleServices = "4.4.2"
 firebaseFirestore = "25.1.1"
+swiperefreshlayout = "1.1.0"
+zxingAndroidEmbedded = "4.1.0"
 
 [libraries]
+cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
+core = { module = "com.google.zxing:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -23,6 +29,8 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 
 circleimageview = { group = "de.hdodenhof", name = "circleimageview", version = "3.1.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
+zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
