--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".View.QrOrganiserActivity" />
         <activity android:name=".View.EntrantListActivity"/>
         <activity android:name=".View.SignUpActivity"/>
+        <activity android:name=".View.EventEditActivity"/>
         <activity android:name=".View.QRUserActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".View.LocationActivity" />
