Fixed class name AdminFacilityListActivity to AdminEventListActivity

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity android:name=".View.FacilityListActivity" />
         <activity android:name=".View.AdminProfileListActivity" />
         <activity android:name=".View.AdminImageListActivity" />
-        <activity android:name=".View.AdminFacilityListActivity" />
+        <activity android:name=".View.AdminEventListActivity" />
         <activity android:name=".View.AdminEventOverlayActivity" />
         <activity android:name=".View.CreateEventOptionsActivity" />
         <activity android:name=".View.CreateEventActivity" />
