Browse Images Delete Event Delete QRhashdata Delete Image

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".View.AdminImageListActivity" />
         <activity android:name=".View.AdminFacilityListActivity" />
         <activity android:name=".View.CreateEventOptionsActivity" />
+        <activity android:name=".View.BrowseImagesActivity" />
         <activity android:name=".View.CreateEventActivity" />
         <activity android:name=".View.EventLandingPageUserActivity" />
         <activity android:name=".View.EventLandingPageOrganizerActivity" />
