--- a/Project_v2/gradle/libs.versions.toml
+++ b/Project_v2/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 agp = "8.7.1"
 cardview = "1.0.0"
+compilerVersion = "4.15.1"
 core = "3.5.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+lottie = "6.6.0"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 navigationFragment = "2.8.3"
@@ -18,10 +20,13 @@ zxingAndroidEmbedded = "4.1.0"
 [libraries]
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 core = { module = "com.google.zxing:core", version.ref = "core" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "compilerVersion" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compilerVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
