Now map is being displayed with the city name, and user name of the user

--- a/Project_v2/app/src/main/AndroidManifest.xml
+++ b/Project_v2/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
         <activity android:name=".View.LocationActivity" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY_HERE" />
+            android:value="@string/my_map_api_key" />
 
     </application>
 
