--- a/Project_v2/gradle/libs.versions.toml
+++ b/Project_v2/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ swiperefreshlayout = "1.1.0"
 zxingAndroidEmbedded = "4.1.0"
 activity = "1.8.0"
 rules = "1.5.0"
+fragmentTesting = "1.8.5"
 
 [libraries]
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
@@ -40,6 +41,7 @@ swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout"
 zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
+fragment-testing = { group = "androidx.fragment", name = "fragment-testing", version.ref = "fragmentTesting" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
